--- a/composer.json
+++ b/composer.json
@@ -21,5 +21,8 @@
   "license": "MIT",
   "support": {
     "issues": "https://github.com/ColorlibHQ/AdminLTE/issues"
+  },
+  "require": {
+    "php-mqtt/client": "^0.3.0"
   }
 }
